Closed Bug 872638 Opened 11 years ago Closed 11 years ago

Fix rooting hazard in js::intl_numberingSystem

Categories

(Core :: JavaScript: Internationalization API, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: till, Assigned: till)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
One of two remaining shell hazards
Attachment #749953 - Flags: review?(terrence)
Comment on attachment 749953 [details] [diff] [review]
patch

Review of attachment 749953 [details] [diff] [review]:
-----------------------------------------------------------------

\o/ Thanks, Till!
Attachment #749953 - Flags: review?(terrence) → review+
https://hg.mozilla.org/mozilla-central/rev/9e67b13a273f
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Mass-moving existing Intl-related bugs to the new Core :: JavaScript: Internationalization API component.

If you think this bug has been moved in error, feel free to move it back to Core :: JavaScript Engine.

[Mass change filter: core-js-intl-api-move]
Component: JavaScript Engine → JavaScript: Internationalization API
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: