Bug 872638 - Fix rooting hazard in js::intl_numberingSystem. r=terrence